# Ais4103-portfolio

./: CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt
app/src/app/: hardcoded_loaders.h  hardcoded_ui_states.h  main.cpp  robotwrapper.cpp  robotwrapper.h  urdf_loaders.h
app/src/app/implementations/: motionplannerimpl.cpp  motionplannerimpl.h  ptp_cubic_trajectory_generator.cpp  ptp_cubic_trajectory_generator.h  screwskinematicssolver.cpp
simulation/include/simulation/: motionplanner.h  robotcontrolinterface.h
simulation/src/simulation/: robotcontroldelegator.cpp  robotcontroldelegator.h
utility/: CMakeLists.txt
utility/include/utility/: math.h
utility/src/: math.cpp
visualization/: CMakeLists.txt
visualization/src/: robotscene.cpp
visualization/src/imgui/windows/: robotcontrolwindows.cpp
